--- a/inventory-control/WebContent/WEB-INF/web.xml
+++ b/inventory-control/WebContent/WEB-INF/web.xml
@@ -22,6 +22,16 @@
         <param-value>jp.co.comnic.javalesson.inventory.controller.EditAction</param-value>
     </context-param>
     
+    <context-param>
+        <param-name>/new-account.do</param-name>
+        <param-value>jp.co.comnic.javalesson.inventory.controller.NewAccount</param-value>
+    </context-param>
+    
+    <context-param>
+        <param-name>/new.do</param-name>
+        <param-value>jp.co.comnic.javalesson.inventory.contoroller.New</param-value>
+    </context-param>
+    
     
     <!-- Settings for JSP pages --> 
     <servlet>
@@ -40,6 +50,24 @@
     <servlet-mapping>
         <servlet-name>Edit</servlet-name>
         <url-pattern>/edit</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>NewAccount</servlet-name>
+        <jsp-file>/new-account.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>NewAccount</servlet-name>
+        <url-pattern>/newaccount</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>New</servlet-name>
+        <jsp-file>/new.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>New</servlet-name>
+        <url-pattern>/new</url-pattern>
     </servlet-mapping>
     
 </web-app>
