--- a/inventory-control/WebContent/WEB-INF/web.xml
+++ b/inventory-control/WebContent/WEB-INF/web.xml
@@ -12,6 +12,20 @@
         <param-value>jp.co.comnic.javalesson.inventory.controller.LoginAction</param-value>
     </context-param>
     
+    <context-param>
+        <param-name>/edit.do</param-name>
+        <param-value>jp.co.comnic.javalesson.inventory.controller.EditAction</param-value>
+    </context-param>
+    
+    <context-param>
+        <param-name>/new-account.do</param-name>
+        <param-value>jp.co.comnic.javalesson.inventory.controller.NewAccountAction</param-value>
+    </context-param>
+    
+    <context-param>
+        <param-name>/new.do</param-name>
+        <param-value>jp.co.comnic.javalesson.inventory.controller.NewAction</param-value>
+    </context-param>
     
     <!-- Settings for JSP pages --> 
     <servlet>
@@ -24,5 +38,34 @@
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
     
+    <servlet>
+        <servlet-name>Edit</servlet-name>
+        <jsp-file>/edit.jsp</jsp-file>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>Edit</servlet-name>
+        <url-pattern>/edit</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>NewAccount</servlet-name>
+        <jsp-file>/new-account.jsp</jsp-file>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>NewAccount</servlet-name>
+        <url-pattern>/new-account</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>New</servlet-name>
+        <jsp-file>/new.jsp</jsp-file>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>New</servlet-name>
+        <url-pattern>/new</url-pattern>
+    </servlet-mapping>
     
 </web-app>
