--- a/inventory-control/WebContent/WEB-INF/web.xml
+++ b/inventory-control/WebContent/WEB-INF/web.xml
@@ -27,6 +27,11 @@
         <param-value>jp.co.comnic.javalesson.inventory.controller.NewAction</param-value>
     </context-param>
     
+    <context-param>
+        <param-name>/logout.do</param-name>
+        <param-value>jp.co.comnic.javalesson.inventory.controller.LogoutAction</param-value>
+    </context-param>
+    
     <!-- Settings for JSP pages --> 
     <servlet>
         <servlet-name>Login</servlet-name>
@@ -66,6 +71,16 @@
     <servlet-mapping>
         <servlet-name>New</servlet-name>
         <url-pattern>/new</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>Logout</servlet-name>
+        <jsp-file>/login.jsp</jsp-file>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>Logout</servlet-name>
+        <url-pattern>/logout</url-pattern>
     </servlet-mapping>
     
 </web-app>
